fix: global vertical scrolling on mobile

--- a/front/src/style/arch.css
+++ b/front/src/style/arch.css
@@ -6,6 +6,7 @@ th:nth-child(3), th:nth-child(4), th:nth-child(5) {
 table {
 	border-spacing: 0;
 	border: 1px solid var(--dark-back);
+	overflow: hidden;
 }
 
 th, td {
