--- a/front/src/style/global.css
+++ b/front/src/style/global.css
@@ -12,6 +12,7 @@
 
 html {
 	height: 100vh;
+	overflow: hidden;
 }
 
 body {
@@ -44,7 +45,7 @@ main {
 	padding: 1rem;
 	align-items: center;
 	flex-grow: 1;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	width: 100%;
 	margin: 0;
@@ -81,8 +82,10 @@ footer a {
 	gap: 0.25rem;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1600px) {
 	body {
+		display: block;
+		overflow: auto;
 		font-size: 1.5rem;
 	}
 
@@ -93,6 +96,7 @@ footer a {
 
 	main {
 		padding: 0.5rem;
+		overflow: hidden;
 	}
 
 	footer {
